# gotham-city

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  Dockerfile  Dockerrun.aws.json  LICENSE  README.md  iclient.sh  launch-server.sh
.circleci/: config.yml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: -bug--bug-report.md  -sparkles--feature-request.md
.github/workflows/: gotham-client-build.yml  gotham-server-tests.yml  release-please.yml
demo-wallet/: Cargo.toml  README.md
demo-wallet/src/: main.rs
demo-wallet/src/bitcoin/: cli.rs  commands.rs  mod.rs
demo-wallet/src/ethereum/: cli.rs  commands.rs  mod.rs
gotham-client/: .gitignore  Cargo.toml  README.md  Settings.toml  cli.yml  gotham-android.sh
gotham-client/docker_images/android/: Dockerfile  build_and_extract.sh
gotham-client/docker_images/ios/: build_ios.sh
gotham-client/escrow/: client.backup  pk.json  sk.json
gotham-client/src/: args.rs  lib.rs  main.rs  tests.rs
gotham-client/src/api/: mod.rs
gotham-client/src/ecdsa/: get_secret_at_location.rs  keygen.rs  keygen_legacy.rs  mod.rs  recover.rs  rotate.rs  rotate_legacy.rs  sign.rs  types.rs
gotham-client/src/eddsa/: keygen.rs  mod.rs  sign.rs  types.rs
gotham-client/src/escrow/: mod.rs
gotham-client/src/schnorr/: mod.rs
gotham-client/src/utilities/: mod.rs  requests.rs
gotham-client/src/wallet/: mod.rs
gotham-client/test-assets/: DO_NOT_DELETE.md  wallet.data
gotham-client/wallet/: backup.data
gotham-server/: .gitignore  Cargo.toml  Dockerfile  README.md  Rocket.toml  Settings.toml  rust-toolchain.toml
gotham-server/benches/: keygen_bench.rs  sign_bench.rs
gotham-server/local-dynamodb/: docker-compose.yml
gotham-server/snap/: snapcraft.yaml
gotham-server/src/: lib.rs  main.rs  mod.rs  public_gotham.rs  server.rs  tests.rs
gotham-server/src/auth/: cognito.rs  jwt.rs  mod.rs  passthrough.rs
gotham-server/src/routes/: ecdsa.rs  eddsa.rs  keygen.rs  mod.rs  ping.rs  schnorr.rs
gotham-server/src/storage/: db.rs  mod.rs
gotham-server/src/storage/aws/: dynamodb.rs  error.rs  mod.rs
gotham-server/src/utilities/: db.rs  mod.rs
gotham-server/test-data/: key-set.json  pk.der  pk.pem
gotham-utilities/server/: buildspec.yml
gotham-utilities/server/cognito/: jwt-to-pems.js  package-lock.json  package.json
gotham-utilities/server/docker-build-img/: Dockerfile
integration-tests/: .gitignore  Cargo.toml  README.md
integration-tests/src/: test.rs
integration-tests/tests/: ecdsa.rs  eddsa.rs
white-paper/: white-paper.tex
