[workspace]
members = [
    "gotham-server",
    "gotham-client",
    "integration-tests",
]

[workspace.dependencies]
gotham-server = { path = "gotham-server" }
gotham-client = { path = "gotham-client" }
serde = { version = "1", features = ["serde_derive"] }
serde_json = "1"
log = "0.4"
reqwest = "0.9.5"
failure = "0.1"
floating-duration = "0.1.2"
jni = "0.19.0"
rocket = { version = "0.5.0-rc.1", default-features = false, features=["json"]}
rocksdb = "0.17"
rusoto_dynamodb = "0.47"
rusoto_core = "0.47"
config = "0.9.2"
uuid = { version = "0.7", features = ["v4"] }
jsonwebtoken = "8"
hex = "0.4"
chrono = "0.4.9"
env_logger = "0.9.0"

two-party-ecdsa = { git = "https://github.com/ZenGo-X/two-party-ecdsa.git" }
kms = { git = "https://github.com/ZenGo-X/kms-secp256k1.git", branch = "2.0" }
two-party-musig2-eddsa = { git = "https://github.com/ZenGo-X/two-party-musig2-eddsa", tag = "v0.1.2" }
