[workspace]
members = [
    "demo-wallet",
    "gotham-server",
    "gotham-client",
    "integration-tests",
]

[workspace.dependencies]
gotham-server = { path = "gotham-server" }
gotham-client = { path = "gotham-client" }
serde = { version = "1", features = ["derive", "serde_derive"] }
serde_json = "1"
log = "0.4"
reqwest = "0.9.5"
failure = "0.1"
floating-duration = "0.1.2"
rocket = { version = "0.5.0-rc.1", default-features = false, features=["json"]}
config = "0.9.2"
uuid = { version = "0.7", features = ["v4"] }
jsonwebtoken = "8"
hex = "0.4"
secp256k1 = {version = "0.21.0", features = ["global-context"]}
rand = "0.8"
two-party-ecdsa = { git = "https://github.com/ZenGo-X/two-party-ecdsa.git", branch="compatibility_gotham_engine" }
gotham-engine = { git = "https://github.com/ZenGo-X/gotham-engine.git" }
