[package]
name = "demo-wallet"
version = "0.1.0"
edition = "2021"
description = "Bitcoin and Ethereum minimalist wallet CLI app on top of Gotham City Client"

[dependencies]
# Common
serde = "1.0"
serde_json = "1.0"
clap = { version = "4.3", features = ["derive"] }
config = "0.13"

# Etherum
ethers = { version = "2.0", features = ["rustls"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
eyre = "0.6"
async-trait = "0.1"
thiserror = "1.0"

# Bitcoin
uuid = { version = "0.7", features = ["v4"] }
bitcoin = "0.27.1"
itertools = "0.11.0"
electrumx_client = { git = "https://github.com/ZenGo-X/rust-electrumx-client.git", tag = "bitcoin@0.26.0"}
two-party-ecdsa.workspace = true
log.workspace = true
hex.workspace = true

# Client
gotham-client.workspace = true


[dev-dependencies]
mockall = "0.11.4"
