[package]
name = "gotham-client"
version = "0.1.0"
authors = [
        "x@zengo.com"
]
edition = "2021"

[target.'cfg(target_os="android")'.dependencies]
jni = { version = "0.19", default-features = false }

[lib]
#crate-type = ["staticlib", "cdylib", "lib"]
name = "client_lib"
path = "src/lib.rs"

[[bin]]
name = "cli"
path = "src/main.rs"

[dependencies]
serde.workspace = true
serde_json.workspace = true
log.workspace = true
reqwest.workspace = true
failure.workspace = true
two-party-ecdsa.workspace = true
kms.workspace = true
electrumx_client = { git = "https://github.com/KZen-networks/rust-electrumx-client", tag = "bitcoin@0.20.0" }
itertools = "0.8.0"
hex = "0.3.2"
bitcoin = "0.26.0"
config = "0.9"
floating-duration = "0.1.2"
serde_derive = "1.0"
uuid = { version = "0.7", features = ["v4"] }
mockall = "0.11.3"
clap = { version = "4.1.11" ,features = [ "derive" ]}
rand = "0.8"
secp256k1 = {version = "0.21.3", features = ["global-context", "recovery"]}
ethers = "1.0.0"
tokio = { version = "1.23.0", features = ["macros"] }
eyre = "0.6.8"
sha2 = "0.10.6"
[dev-dependencies]
mockall = "0.11"


[patch.crates-io]
rust-gmp = { version = "0.5.0", features = ["serde_support"], git = "https://github.com/KZen-networks/rust-gmp" }