[package]
name = "gotham-client"
version = "0.1.0"
authors = [
    "gbenattar <g.benattar@gmail.com>",
    "Oded Leiba <odedleiba5@gmail.com"
]
edition = "2021"

[target.'cfg(target_os="android")'.dependencies]
jni = { version = "0.19", default-features = false }

[lib]
crate-type = ["staticlib", "cdylib", "lib"]
name = "client_lib"
path = "src/lib.rs"

[profile.release]
lto = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
log.workspace = true
reqwest.workspace = true
failure.workspace = true
floating-duration.workspace = true
two-party-ecdsa.workspace = true
kms.workspace = true
clap.workspace = true
hex.workspace = true

uuid = { version = "0.7", features = ["v4"] }
bitcoin = "0.27.1"
mockall = "0.11.4"
itertools = "0.11.0"

electrumx_client = { git = "https://github.com/ZenGo-X/rust-electrumx-client.git", tag = "bitcoin@0.20.0"}



secp256k1.workplace = true
#itertools.workplace = true
#electrum-client.workplace = true
#bitcoin.workplace = true
#bitcoin = "^0.23.0"

[dev-dependencies]
mockall = "0.11"
