[package]
name = "gotham-client"
version = "0.1.0"
authors = [
    "z@zengo.com"
]
edition = "2021"

[target.'cfg(target_os="android")'.dependencies]
jni = { version = "0.19", default-features = false }

[lib]
crate-type = ["staticlib", "cdylib", "lib"]
name = "client_lib"
path = "src/lib.rs"

[profile.release]
lto = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
log.workspace = true
reqwest.workspace = true
failure.workspace = true
floating-duration.workspace = true
two-party-ecdsa.workspace = true

[dev-dependencies]
mockall = "0.11"
