[package]
name = "gotham-server"
version = "0.1.0"
authors = [
    "gbenattar <g.benattar@gmail.com>",
    "Oded Leiba <odedleiba5@gmail.com"
]
edition = "2021"

[lib]
name = "server_lib"
path = "src/lib.rs"

[[bin]]
name = "server_exec"
path = "src/main.rs"

[dependencies]
rocket.workspace = true
rocksdb = { workspace = true, optional = true }
serde.workspace = true
serde_json.workspace = true
log.workspace = true
config.workspace = true
uuid.workspace = true
failure.workspace = true
jsonwebtoken.workspace = true
hex.workspace = true
two-party-ecdsa.workspace = true
kms.workspace = true
chrono.workspace = true
env_logger.workspace = true

rusoto_dynamodb = {workspace = true, optional = true}
rusoto_core = {workspace = true, optional = true}

[features]
default = ["local", "aws"]
local = ["rocksdb"]
aws = ["rusoto_dynamodb", "rusoto_core"]

[dependencies.serde_dynamodb]
git = "https://github.com/KZen-networks/serde_dynamodb"
features = ["native-tls"]
default-features = false

[dev-dependencies]
time-test = "0.2.1"
floating-duration.workspace = true
