[package]
name = "gotham-server"
version = "1.0.0"
authors = [
    "x@zengo.com"
]
edition = "2021"

[lib]
name = "server_lib"
path = "src/lib.rs"

[[bin]]
name = "server_exec"
path = "src/main.rs"

[dependencies]
rocket.workspace = true
serde.workspace = true
serde_json.workspace = true
log.workspace = true
config.workspace = true
uuid.workspace = true
failure.workspace = true
jsonwebtoken.workspace = true
hex.workspace = true
two-party-ecdsa.workspace = true
kms.workspace = true
rocksdb = { version = "0.20.1", optional = true }
rusoto_dynamodb = {version = "0.48", optional = true}
rusoto_core = {version = "0.47", optional = true}

[features]
default = ["local", "aws"]
local = ["rocksdb"]
aws = ["rusoto_dynamodb", "rusoto_core"]

[dependencies.serde_dynamodb]
git = "https://github.com/KZen-networks/serde_dynamodb"
features = ["native-tls"]
default-features = false

[dev-dependencies]
time-test = "0.2.1"
floating-duration.workspace = true
criterion = "0.4.0"
pprof = { version = "0.11", features = ["flamegraph", "frame-pointer", "criterion"] }
rand = "0.8"

[[bench]]
name = "keygen_bench"
harness = false

[[bench]]
name = "sign_bench"
harness = false

