[package]
name = "gotham-server"
version = "2.0.0"
authors = [
    "x@zengo.com"
]
edition = "2021"

[lib]
name = "server_lib"
path = "src/lib.rs"

[[bin]]
name = "server_exec"
path = "src/main.rs"

[dependencies]
rocket.workspace = true
serde.workspace = true
serde_json.workspace = true
log.workspace = true
config.workspace = true
uuid.workspace = true
failure.workspace = true
jsonwebtoken.workspace = true
hex.workspace = true
two-party-ecdsa.workspace = true
gotham-engine.workspace = true

rocksdb = { version = "0.21.0" , optional = true}
chrono = "0.4.26"
cargo-pants = "0.4.16"
redis = { version = "0.23.0", features = ["cluster"] }
thiserror = "1.0"
erased-serde = "0.3"
async-trait = "0.1.73"
tokio = { version = "1", features = ["full"] }

[features]
default = ["local"]
local = ["rocksdb"]



[dev-dependencies]
time-test = "0.2.1"
floating-duration.workspace = true
criterion = "0.5.1"
pprof = { version = "0.11", features = ["flamegraph", "frame-pointer", "criterion"] }
rand = "0.8"

[[bench]]
name = "keygen_bench"
harness = false

[[bench]]
name = "sign_bench"
harness = false

