[package]
name = "tests"
version = "0.1.2"
authors = []
edition = "2021"

[dependencies]
rocket = { version="0.5.0-rc.1", default-features=false, features=["json"]}
secp256k1 = "0.20"
ed25519-dalek = "1.0"
rand = "0.8"
two-party-ecdsa = { git = "https://github.com/ZenGo-X/two-party-ecdsa.git" }
gotham-server = { path = "../gotham-server" }
gotham-client = { path = "../gotham-client" }


