[package]
name = "tests"
version = "0.1.2"
authors = []
edition = "2021"

[dependencies]
rocket.workspace = true
two-party-ecdsa.workspace = true
gotham-server.workspace = true
gotham-client.workspace = true
serde_json.workspace = true
secp256k1 = {version = "0.21.0", features = ["global-context"]}
ed25519-dalek = "1.0"
rand = "0.8"


